@@ -24,6 +24,11 @@ class CyberSourceTest < Test::Unit::TestCase
                                                       eci: '05',
                                                       payment_cryptogram: '111111111100cryptogram',
                                                       source: :network_token)
+    @network_token_mastercard = network_tokenization_credit_card('5555555555554444',
+                                                                 brand: 'master',
+                                                                 transaction_id: '123',
+                                                                 eci: '05',
+                                                                 payment_cryptogram: '111111111100cryptogram')
     @apple_pay = network_tokenization_credit_card('4111111111111111',
                                                   brand: 'visa',
                                                   transaction_id: '123',
@@ -265,6 +270,22 @@ class CyberSourceTest < Test::Unit::TestCase
       @gateway.purchase(100, @credit_card, tax_management_indicator: 3)
     end.check_request do |_endpoint, data, _headers|
       assert_match(/<taxManagementIndicator>3<\/taxManagementIndicator>/, data)
+    end.respond_with(successful_purchase_response)
+  end
+
+  def test_auth_includes_gratuity_amount
+    stub_comms do
+      @gateway.authorize(100, @credit_card, gratuity_amount: '7.50')
+    end.check_request do |_endpoint, data, _headers|
+      assert_match(/<gratuityAmount>7.50<\/gratuityAmount>/, data)
+    end.respond_with(successful_purchase_response)
+  end
+
+  def test_purchase_includes_gratuity_amount
+    stub_comms do
+      @gateway.purchase(100, @credit_card, gratuity_amount: '7.50')
+    end.check_request do |_endpoint, data, _headers|
+      assert_match(/<gratuityAmount>7.50<\/gratuityAmount>/, data)
     end.respond_with(successful_purchase_response)
   end
 
@@ -1011,6 +1032,17 @@ class CyberSourceTest < Test::Unit::TestCase
     )
 
     assert response = @gateway.authorize(@amount, credit_card, @options)
+    assert_success response
+  end
+
+  def test_successful_purchase_network_tokenization_mastercard
+    @gateway.expects(:ssl_post).with do |_host, request_body|
+      assert_xml_valid_to_xsd(request_body)
+      assert_match %r'<ucaf>\n  <authenticationData>111111111100cryptogram</authenticationData>\n  <collectionIndicator>2</collectionIndicator>\n</ucaf>\n<ccAuthService run=\"true\">\n  <commerceIndicator>spa</commerceIndicator>\n</ccAuthService>\n<ccCaptureService run=\"true\">\n</ccCaptureService>\n<businessRules>\n</businessRules>\n<paymentNetworkToken>\n  <transactionType>1</transactionType>\n</paymentNetworkToken>', request_body
+      true
+    end.returns(successful_purchase_response)
+
+    assert response = @gateway.purchase(@amount, @network_token_mastercard, @options)
     assert_success response
   end
 
